--- a/.ebextensions/django.config
+++ b/.ebextensions/django.config
@@ -1,22 +1,4 @@
 option_settings:
-  aws:elasticbeanstalk:application:environment:
-    DJANGO_SETTINGS_MODULE: "iotd.settings"
-    PYTHONPATH: "/var/app/current:$PYTHONPATH"
   aws:elasticbeanstalk:container:python:
-    WSGIPath: "iotd.wsgi:application"
-  aws:elasticbeanstalk:environment:process:default:
-    HealthCheckPath: "/api"
-    MatcherHTTPCode: "200-499"
+    WSGIPath: ecommerceApi.wsgi:application
 
-container_commands:
-  01_makemigrations:
-    command: "source /var/app/venv/*/bin/activate && python3 manage.py makemigrations --noinput"
-    leader_only: true
-  02_migrate:
-    command: "source /var/app/venv/*/bin/activate && python3 manage.py migrate --noinput"
-    leader_only: true
-  03_createsu:
-    command: "source /var/app/venv/*/bin/activate && python3 manage.py createsu"
-  04_collectstatic:
-    command: "source /var/app/venv/*/bin/activate && python3 manage.py collectstatic --noinput"
-    leader_only: true
