--- a/.ebextensions/django.config
+++ b/.ebextensions/django.config
@@ -1,4 +1,22 @@
 option_settings:
+  aws:elasticbeanstalk:application:environment:
+    DJANGO_SETTINGS_MODULE: "ecommerceApi.settings"
+    PYTHONPATH: "/var/app/current:$PYTHONPATH"
   aws:elasticbeanstalk:container:python:
-    WSGIPath: ecommerceApi.wsgi:application
+    WSGIPath: "ecommerceApi.wsgi:application"
+  aws:elasticbeanstalk:environment:process:default:
+    HealthCheckPath: "/api"
+    MatcherHTTPCode: "200-499"
 
+container_commands:
+  01_makemigrations:
+    command: "source /var/app/venv/*/bin/activate && python3 manage.py makemigrations --noinput"
+    leader_only: true
+  02_migrate:
+    command: "source /var/app/venv/*/bin/activate && python3 manage.py migrate --noinput"
+    leader_only: true
+  03_createsu:
+    command: "source /var/app/venv/*/bin/activate && python3 manage.py createsu"
+  04_collectstatic:
+    command: "source /var/app/venv/*/bin/activate && python3 manage.py collectstatic --noinput"
+    leader_only: true
