--- a/.ebextensions/django.config
+++ b/.ebextensions/django.config
@@ -1,19 +1,5 @@
 option_settings:
   aws:elasticbeanstalk:container:python:
-    WSGIPath: "ecommerceApi.wsgi:application"
-  aws:elasticbeanstalk:environment:process:default:
-    HealthCheckPath: "/api"
-    MatcherHTTPCode: "200-499"
+    WSGIPath: ecommerceApi.wsgi:application
 
-container_commands:
-  01_makemigrations:
-    command: "source /var/app/venv/*/bin/activate && python3 manage.py makemigrations --noinput"
-    leader_only: true
-  02_migrate:
-    command: "source /var/app/venv/*/bin/activate && python3 manage.py migrate --noinput"
-    leader_only: true
-  03_createsu:
-    command: "source /var/app/venv/*/bin/activate && python3 manage.py createsu"
-  04_collectstatic:
-    command: "source /var/app/venv/*/bin/activate && python3 manage.py collectstatic --noinput"
-    leader_only: true
+
