--- a/.ebextensions/django.config
+++ b/.ebextensions/django.config
@@ -1,5 +1,5 @@
 option_settings:
   aws:elasticbeanstalk:container:python:
-    WSGIPath: ecommerceApi.wsgi:application
+    WSGIPath: ecommerceApi/wsgi:application
 
 
