--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,5 @@
 argcomplete==1.12.3
-asgiref==3.4.1
-awsebcli==3.20.2
-boto3==1.20.5
-botocore==1.21.65
+asgiref==3.4.1s
 cement==2.8.2
 certifi==2021.10.8
 cfn-flip==1.3.0
@@ -27,7 +24,6 @@ python-slugify==5.0.2
 pytz==2021.1
 PyYAML==5.4.1
 requests==2.26.0
-s3transfer==0.5.0
 semantic-version==2.8.5
 six==1.14.0
 sqlparse==0.4.1
