--- a/requirements.txt
+++ b/requirements.txt
@@ -1,40 +1,2 @@
-argcomplete==1.12.3
-asgiref==3.4.1s
-cement==2.8.2
-certifi==2021.10.8
-cfn-flip==1.3.0
-charset-normalizer==2.0.7
-click==8.0.3
-colorama==0.4.3
-Django==3.2.6
-djangorestframework==3.12.4
-durationpy==0.5
-future==0.16.0
-hjson==3.0.2
-idna==3.3
-jmespath==0.10.0
-kappa==0.6.0
-pathspec==0.5.9
-pep517==0.12.0
-pip-tools==6.4.0
-placebo==0.10.0
-psycopg2-binary==2.9.3
-python-dateutil==2.8.2
-python-slugify==5.0.2
-pytz==2021.1
-PyYAML==5.4.1
-requests==2.26.0
-semantic-version==2.8.5
-six==1.14.0
-sqlparse==0.4.1
-termcolor==1.1.0
-text-unidecode==1.3
-toml==0.10.2
-tomli==1.2.2
-tqdm==4.62.3
-troposphere==3.1.1
-urllib3==1.26.7
-wcwidth==0.1.9
-Werkzeug==2.0.2
-wsgi-request-logger==0.4.6
-zappa==0.54.1
+Django
+djangorestframework
