Complete Deployment Setup

--- a/.ebextensions/02_setup.config
+++ b/.ebextensions/02_setup.config
@@ -9,6 +9,8 @@ commands:
         command: sudo yum install -y postgresql-devel
 
 container_commands:
+  01_migration:
+      command: "source /var/app/venv/*/bin/activate && python manage.py makemigrations"
   02_migrate:
       command: "source /var/app/venv/*/bin/activate && python manage.py migrate --noinput"
       leader_only: true
